--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.8.0",
+    "perfect-match-backend": "file:",
     "pg": "^8.8.0",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.6.13",
