--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -42,12 +42,14 @@ RUN touch ./next.config.js
 # Set environment variables
 ENV NODE_ENV=production
 ENV PORT=3000
+ENV LANG=en_US.UTF-8
+ENV LC_ALL=en_US.UTF-8
 
 # Expose the port the app will run on
 EXPOSE 3000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 CMD wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 CMD wget --no-verbose --tries=1 --spider http://localhost:3000/health || exit 1
 
 # Start the application
 CMD ["npm", "start"]
