--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^7.6.4",
     "next": "^13.5.11",
     "next-auth": "^4.15.0",
+    "perfect-match-frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-virtualized-auto-sizer": "^1.0.26",
