--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "perfect-match-infrastructure": "file:"
   }
 }
